# gura

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build-mswin.bat  configure  gura.sln  test.cpp
src/: AUTHORS  Algorithm.cpp  Binary.cpp  CMakeLists.txt  Codec.cpp  CustomClass.cpp  DateTime.cpp  Declaration.cpp  DllMain.cpp  Environment.cpp  Expr.cpp  Formatter.cpp  Function.cpp  Image.cpp  Makefile.am  Makefile.in  Makefile.mak  Makefile.msc  Module_sys.cpp  OAL.cpp  Object.cpp  Object_audio.cpp  Object_binary.cpp  Object_datetime.cpp  Object_dict.cpp  Object_environment.cpp  Object_error.cpp  Object_expr.cpp  Object_function.cpp  Object_image.cpp  Object_iterator.cpp  Object_list.cpp  Object_matrix.cpp  Object_stream.cpp  Object_string.cpp  Object_timedelta.cpp  Object_uri.cpp  Operator.cpp  Parser.cpp  Stream.cpp  (+29 more)
src/Module_base64/: Module_base64.cpp  build.gura
src/Module_bmp/: Module_bmp.cpp  Module_bmp.h  build.gura
src/Module_bzip2/: Module_bzip2.cpp  build.gura  test.gura
src/Module_cairo/: Module_cairo.cpp  Module_cairo.h  Object_Writer_surface.cpp  Object_Writer_surface.h  Object_context.cpp  Object_context.h  Object_device.cpp  Object_device.h  Object_font_extents.cpp  Object_font_extents.h  Object_font_face.cpp  Object_font_face.h  Object_font_options.cpp  Object_font_options.h  Object_ft_font_face.cpp  Object_glyph.cpp  Object_glyph.h  Object_image_surface.cpp  Object_image_surface.h  Object_mesh_pattern.cpp  Object_mesh_pattern.h  Object_path.cpp  Object_path.h  Object_pattern.cpp  Object_pattern.h  Object_pdf_surface.cpp  Object_pdf_surface.h  Object_ps_surface.cpp  Object_ps_surface.h  Object_quartz_font_face.cpp  Object_quartz_font_face.h  Object_quartz_surface.h  Object_raster_source_pattern.cpp  Object_recording_surface.h  Object_rectangle.cpp  Object_rectangle.h  Object_rectangle_int.cpp  Object_rectangle_int.h  Object_region.cpp  Object_region.h  (+28 more)
src/Module_canvas/: Module_canvas.cpp  Module_canvas.h  build.gura
src/Module_codecs_basic/: Module_codecs_basic.cpp  Module_codecs_basic.h  build.gura
src/Module_codecs_iso8859/: Module_codecs_iso8859.cpp  Module_codecs_iso8859.h  build.gura
src/Module_codecs_japanese/: Conv_Japanese.cpp  Conv_Japanese.h  Module_codecs_japanese.cpp  Module_codecs_japanese.h  build.gura
src/Module_conio/: Module_conio.cpp  Module_conio.h  build.gura  test.gura  test2.gura  test3.gura
src/Module_console/: Module_console.cpp  Module_console.h  build.gura  test.gura  test2.gura  test3.gura
src/Module_csv/: Module_csv.cpp  Module_csv.h  build.gura
src/Module_curl/: Module_curl.cpp  Module_curl.h  build.gura  extract.gura  test-curl.gura  test.gura
src/Module_emf/: Module_emf.cpp  Module_emf.h
src/Module_freetype/: Module_freetype.cpp  Module_freetype.h  Object_BBox.cpp  Object_BBox.h  Object_BDF_Property.cpp  Object_BDF_Property.h  Object_Bitmap.cpp  Object_Bitmap.h  Object_CharMap.cpp  Object_CharMap.h  Object_Context.cpp  Object_Context.h  Object_FTC_CMapCache.cpp  Object_FTC_CMapCache.h  Object_FTC_ImageCache.cpp  Object_FTC_ImageCache.h  Object_FTC_ImageType.cpp  Object_FTC_ImageType.h  Object_FTC_Manager.cpp  Object_FTC_Manager.h  Object_FTC_Node.cpp  Object_FTC_Node.h  Object_FTC_SBit.cpp  Object_FTC_SBit.h  Object_FTC_SBitCache.cpp  Object_FTC_SBitCache.h  Object_FTC_Scaler.cpp  Object_FTC_Scaler.h  Object_Face.cpp  Object_Face.h  Object_Glyph.cpp  Object_GlyphSlot.cpp  Object_GlyphSlot.h  Object_Matrix.cpp  Object_Matrix.h  Object_Outline.cpp  Object_Outline.h  Object_Raster.cpp  Object_Raster.h  Object_Span.cpp  (+10 more)
src/Module_fs/: Module_fs.cpp  Module_fs.h  build.gura
src/Module_gif/: Module_gif.cpp  Module_gif.h  build.gura
src/Module_glu/: Module_glu.cpp  Module_glu.h  build.gura  extract.gura
src/Module_guri/: Module_guri.cpp  Module_guri.h  build.gura
src/Module_gzip/: Module_gzip.cpp  build.gura  test.gura
src/Module_hash/: Module_hash.cpp  Module_hash.h  build.gura
src/Module_http/: Module_http.cpp  Module_http.h  build.gura
src/Module_jpeg/: InspectExif.gura  Module_jpeg.cpp  Module_jpeg.h  Object_Tag.cpp  Object_Tag.h  Object_exif.cpp  Object_exif.h  Object_ifd.cpp  Object_ifd.h  Object_tag.cpp  Object_tag.h  build.gura  test.gura
src/Module_llvm/: Module_llvm.cpp  Module_llvm.h  build.gura
src/Module_magick/: Module_magick.cpp  build.gura
src/Module_markdown/: Module_markdown.cpp  Module_markdown.h  build.gura  markdown-console.gura  markdown-html.gura  markdown.gura  result.sample.txt  test-markdown.gura  test-msdoc.gura  test-test.gura  test.bat  test.gura  test.txt  test1.txt  test2.txt  test3.txt
src/Module_math/: Module_math.cpp
src/Module_midi/: Content.cpp  Content.h  Event.cpp  Event.h  MIDIHandle.cpp  MIDIHandle.h  MML.cpp  MML.h  MmlParser.cpp  MmlParser.h  Module_midi.cpp  Module_midi.h  Player.cpp  Player.h  Port.cpp  Port.h  SMF.cpp  SMF.h  SMFReader.cpp  SMFReader.h  Sequence.cpp  Sequence.h  SoundFont.cpp  SoundFont.h  Track.cpp  Track.h  a.gura  build.gura  elise.gura  midi-create.gura  midi-duptest.gura  midi-mml.gura  midi-rawwrite.gura  midi-send.gura  midi-sf.gura  midi-smf-create.gura  midi-smf-file.gura  midi-smf-play.gura  midi-smf-print.gura  midi-smf.gura  (+4 more)
src/Module_msico/: Module_msico.cpp  Module_msico.h  build.gura
src/Module_mswin/: Module_mswin.cpp  Module_mswin.h  build.gura
src/Module_mysql/: Module_mysql.cpp  build.gura
src/Module_net_ftp/: Module_net_ftp.cpp  Module_net_ftp.h  build.gura
src/Module_net_http/: Module_net_http.cpp  Module_net_http.h  build.gura
src/Module_net_pop3/: Module_net_pop3.cpp  Module_net_pop3.h  build.gura
src/Module_net_smtp/: Module_net_smtp.cpp  Module_net_smtp.h  build.gura
src/Module_opengl/: ConvertHeader.gura  ExtractParamInfo.gura  HandCoded.cpp  Module_opengl.cpp  Module_opengl.h  build.gura
src/Module_os/: Module_os.cpp  build.gura
src/Module_path/: Module_path.cpp  build.gura
src/Module_png/: Module_png.cpp  Module_png.h  build.gura
src/Module_postgresql/: Module_postgresql.cpp  Module_postgresql.h  build.gura
src/Module_ppm/: Module_ppm.cpp  Module_ppm.h  build.gura
(+6155 files in other folders)
